Correct enemy doc
